# disco-old

./: LICENSE.md  README.md  disco.cabal  stack.yaml
app/: Main.hs
src/Network/: Disco.hs
src/Network/Disco/: Types.hs
src/Network/Disco/Types/: Common.hs  Guild.hs  Voice.hs
