name:                disco
version:             0.1.0.0
homepage:            https://github.com/cronokirby/disco#readme
license:             MIT
license-file:        LICENSE.md
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
copyright:           2017 Lúcás Meier
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Disco
  build-depends:       base >= 4.7 && < 5
                     , aeson == 1.2.*
                     , req == 0.5.*
                     , text == 1.2.*
  default-language:    Haskell2010

executable disco-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , disco
  default-language:    Haskell2010

test-suite disco-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , disco
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cronokirby/disco
